# mobile-app

./: .gitignore  .gitmodules  CODEOWNERS  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/gradle/: libs.versions.toml
ios/: Podfile
ios/Broadcast Extension/: Broadcast Extension.entitlements  DarwinNotificationCenter.swift  SampleHandler.swift  SampleUploader.swift
ios/CallActivityWidget/: AppIntent.swift  CallActivityWidget.swift  CallActivityWidgetBundle.swift  CallActivityWidgetControl.swift  CallActivityWidgetLiveActivity.swift
ios/Runner/: AppDelegate.swift  AppVersionHeader.swift  (+8 more)
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  main.cc  my_application.cc  rust.cmake
macos/: Podfile
plugins/: README.md
rust/: Cargo.toml  cargokit.yaml  tarpaulin.toml
rust/.cargo/: config.toml
rust/crates/frb/: Cargo.toml  cargokit.yaml
rust/crates/frb/src/: errors.rs  flutter_logger.rs  frb_generated.rs  lib.rs  logger.rs  panic_hook.rs
rust/crates/frb/src/livekit/: room.rs
rust/crates/frb/src/proton_meet/: core.rs  meet_auth_store.rs  mod.rs  token.rs  user_config.rs  user_subscription.rs
rust/crates/frb/src/proton_meet/models/: app_event.rs  connection_state.rs  event.rs  join_type.rs  meet_chat_message.rs  meet_info.rs  meet_link.rs  meet_participant.rs  meeting_info.rs  meeting_type.rs  mls_sync_state.rs  mod.rs  participant_track_settings.rs  proton_user_session.rs  recurrence_frequency.rs  rejoin_reason.rs  schedule_meeting.rs  unleash_response.rs  upcoming_meeting.rs  user.rs  user_address.rs  user_key.rs  user_state.rs
rust/crates/frb/src/proton_meet/storage/: mod.rs  user_key_provider.rs
rust/crates/meet/: Cargo.toml
rust/crates/meet-calendar/: Cargo.toml
rust/crates/meet-calendar/src/: lib.rs
rust/crates/meet-chat/: Cargo.toml
rust/crates/meet-chat/src/: error.rs  lib.rs  main.rs
rust/crates/meet-chat/src/domain/: chat_service.rs  key_provider.rs  mod.rs
rust/crates/meet-chat/src/domain/models/: chat_content.rs  chat_content_enc.rs  chat_history.rs  chat_message.rs  mod.rs
rust/crates/meet-chat/src/service/: default_chat_service.rs  default_key_provider.rs  mod.rs
rust/crates/meet-cli/: Cargo.toml
rust/crates/meet-cli/src/: app_runner.rs  app_test_runner.rs  commands.rs  config.rs  main.rs
rust/crates/meet-common/: Cargo.toml
rust/crates/meet-common/src/models/: mod.rs  product_bit.rs  proton_user.rs  proton_user_key.rs  user_subscription.rs
rust/crates/meet-core/: Cargo.toml  README.md  webdriver.json
rust/crates/meet-core/src/: app.rs  app_state.rs  app_test.rs  lib.rs  version.rs
rust/crates/meet-core/src/domain/: mod.rs
rust/crates/meet-core/src/domain/mls/: mls_message_service.rs  mod.rs
rust/crates/meet-core/src/domain/mls/ports/: message_cache_port.rs  mls_store_port.rs  mod.rs  state_repository_port.rs
rust/crates/meet-core/src/domain/room/: mod.rs  room_service.rs  room_service_test.rs
rust/crates/meet-core/src/domain/user/models/: address.rs  email_settings.rs  flags_settings.rs  high_security_settings.rs  login.rs  meet_link.rs  meet_link_info.rs  meeting.rs  mod.rs  participant_track_settings.rs  password_settings.rs  phone_settings.rs  proton_user_settings.rs  referral_settings.rs  two_fa_settings.rs  unleash.rs  user_id.rs  user_settings.rs  user_token_info.rs
rust/crates/meet-core/src/domain/user/ports/: crypto_client.rs  event_api.rs  http_client.rs  meeting_api.rs  mod.rs  unleash_api.rs  user_api.rs  user_repository.rs  user_service.rs  websocket_callbacks.rs  websocket_client.rs
rust/crates/meet-core/src/errors/: core.rs  http_client.rs  login.rs  mod.rs  service.rs
rust/crates/meet-core/src/infra/: auth_store.rs  crypto_client.rs  event_api.rs  http_client.rs  http_client_util.rs  meeting_api.rs  message_cache.rs  mimi_subject_parser.rs  mls_response_ext.rs  mod.rs  proton_response_ext.rs  unleash_api.rs  user_api.rs  ws_client.rs
rust/crates/meet-core/src/infra/adapters/: mod.rs
rust/crates/meet-core/src/infra/adapters/mls/: message_cache_adapter.rs  mls_store_adapter.rs  mod.rs  state_repository_adapter.rs
rust/crates/meet-core/src/infra/adapters/storage/: mod.rs  secure_store_adapter.rs  user_key_callbacks.rs  user_key_provider_adapter.rs
rust/crates/meet-core/src/infra/dto/: access_token.rs  common.rs  end_meeting.rs  event.rs  login.rs  meet_link_info.rs  meeting.rs  meeting_test.rs  mod.rs  participant_track_settings.rs  proton_user.rs  realtime.rs  remove_participant.rs  user_settings.rs  websocket.rs
rust/crates/meet-core/src/infra/ports/: db_client.rs  mod.rs  secure_store.rs  user_key_provider.rs
rust/crates/meet-core/src/infra/storage/: error.rs  idb.rs  mod.rs  persister.rs  sqlite.rs
rust/crates/meet-core/src/infra/storage/entities/: mod.rs  user.rs  user_key.rs  user_key_test.rs  user_test.rs
rust/crates/meet-core/src/infra/tls_pinning/: native.rs  wasm.rs
rust/crates/meet-core/src/service/: message_service.rs  mod.rs  service.rs  service_state.rs  service_test.rs  services_bundle.rs  utils.rs  utils_test.rs
rust/crates/meet-core/src/utils/: mod.rs  reqwest.rs  serde.rs  spawn.rs  time.rs
rust/crates/meet-crypto/: Cargo.toml
rust/crates/meet-crypto/js/: crypto-bridge.js
rust/crates/meet-crypto/src/: binary.rs  chat_message.rs  key.rs  lib.rs  message.rs  native.rs  private_key.rs  room_key.rs  types.rs  web.rs
rust/crates/meet-crypto/src/mocks/: mod.rs  user_keys.rs
rust/crates/meet-curx-core/: Cargo.toml
rust/crates/meet-curx-core/src/: lib.rs
rust/crates/meet-macro/: Cargo.toml
rust/crates/meet-macro/src/: lib.rs
rust/crates/meet-mls/: Cargo.toml
rust/crates/meet-mls/src/: kv.rs  lib.rs  mls.rs
rust/crates/meet-noise/: Cargo.toml  build.rs
rust/crates/meet-noise/src/: lib.rs  main.rs
rust/crates/meet/src/: lib.rs
rust/crates/meet/src/server/: errors.rs  token.rs
rust/crates/meet/src/user_config/: errors.rs  mod.rs  user_config.rs
test/: frb.helper.dart
(+534 files in other folders)
