[package]
name = "proton_meet_frb"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
futures = "0.3.31"
assert_matches = "1.5.0"
mockall = { workspace = true }

[build-dependencies]
flutter_rust_bridge_codegen = { version = "2.11.1" }

[dependencies]
flutter_rust_bridge = { version = "=2.11.1" }

proton-meet-app = { path = "../meet" }
proton-meet-calendar = { path = "../meet-calendar" }
proton-meet-core = { path = "../meet-core" }
proton-meet-chat = { path = "../meet-chat" }
proton-meet-crypto = { path = "../meet-crypto" }
proton-meet-common = { path = "../meet-common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
lazy_static = "1.4.0"
chrono = { workspace = true }
anyhow.workspace = true
async-trait = "0.1.88"

# panic hook use
once_cell = "1.21.3"
crossbeam-channel = "0.5.15"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console", "Storage", "Window"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["staticlib", "cdylib"]

[package.metadata.ios]
# Required
build_targets = ["aarch64-apple-ios"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[features]
default = []
test = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
