[package]
name = "proton-meet-chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

################################################################################
# Dependencies
################################################################################

[dependencies]
# Internal crates
proton-meet-crypto = { path = "../meet-crypto" }

# Workspace-shared dependencies
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Direct normal (non-workspace) dependencies
chrono = { workspace = true, features = ["serde"] }

################################################################################
# Platform-specific dependencies
################################################################################

# Dependencies for native targets (Linux, macOS, Windows)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

# Dependencies for wasm32 targets (browser / wasm-bindgen)
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.17.0", features = ["serde", "v4", "js"] }

################################################################################
# Dev dependencies
################################################################################

[dev-dependencies]
# (Add test-only crates here, e.g. insta, pretty_assertions)

################################################################################
# Features
################################################################################

[features]
default = []
