[package]
name = "meet-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
proton-meet-core = { path = "../meet-core", features = ["dev"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.9.8"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

anyhow = { workspace = true }
rand = { workspace = true }
