[package]
name = "proton-meet-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
serde = { workspace = true }
base64 = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
