[package]
name = "proton-meet-crypto"
version = "0.1.0"
edition = "2021"
description = "Crypto operations for Proton Meet using proton-crypto for native and PMCrypto for web"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
aes-gcm = { version = "0.10.3", features = ["zeroize"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proton-crypto = { workspace = true }
proton-srp = { workspace = true, features = ["pgpinternal"] }
proton-crypto-subtle = { workspace = true }
proton-crypto-account = { workspace = true }
hkdf = "0.12.4"
sha2 = "0.10.9"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console", "Window"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen-test = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
